[tool.poetry]
name = "lcu-change-runes"
version = "0.1.0"
description = "automatically change runes"
authors = ["Rusty <imkhazix@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
bs4 = "^0.0.1"
lcu-driver = "^2.1.3"
selenium = "^4.4.0"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.14.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
